[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-forge"
version = "1.0.0"
description = "Support common PySpark operations on Delta"
readme = "README.md"
authors = [{ name = "Andrij Demianczuk", email = "andrij.demianczuk@databricks.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Commons License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["delta", "pyspark", "spark"]
dependencies = [
    "pyspark"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://www.databricks.com/"

[project.scripts]
realpython = "reader.__main__:main"